--- a/ordersapp/templates/ordersapp/base.html
+++ b/ordersapp/templates/ordersapp/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{{% load staticfiles %}
 
 <!DOCTYPE html>
 <html>
@@ -37,6 +37,8 @@
         $('[data-toggle="tooltip"]').tooltip()
     })
 </script>
+<!-- jQuery formset section -->
+<script src="{% static 'js/jquery.formset.js' %}"></script>
 <!-- GeekShop section -->
 <script src="{% static 'js/orders_scripts.js' %}"></script>
 {% endblock js %}
